--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
     "immer": "^5.1.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -20,6 +21,7 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.6.2",
     "react-redux": "^7.1.3",
     "reactotron-react-native": "^4.0.2",
     "reactotron-redux": "^3.1.2",
